--- a/jekyll/pages/more.html
+++ b/jekyll/pages/more.html
@@ -4,12 +4,12 @@ permalink : /more
 ---
 
 <div class="m-container">
-    <div class="row">
+    <div class="subCont">
         {% include more/skills.html title="Programming Skills" source=site.data.programming-skills %}
         {% include more/skills.html title="Soft Skills" source=site.data.soft-skills %}
     </div>
 
-    <div class="row">
+    <div class="subCont">
         {% include more/timeline.html %}
     </div>
 </div>
