--- a/jekyll/pages/news.html
+++ b/jekyll/pages/news.html
@@ -4,13 +4,19 @@ title: News
 permalink: /news
 ---
 
-<h1>Latest News</h1>
-
-<ul>
+<div class="news">
+    <i>This part is all about my readings. I should rather name it "books" but will I ?</i>
     {% for news in site.posts %}
-    <li>
-        <h2><a href="{{ news.url }}">{{ news.title }}</a></h2>
-        {{ news.excerpt }}
-    </li>
+        <div class="parent myNews">
+            <a href="{{ news.url }}" class="project card">
+                {%-if news.image -%} 
+                        <img src="{{ news.image }}" alt="{{ news.alt }}">
+                {%- endif -%}
+                <div class="card-content">
+                    <p>{{ news.title }}</p>
+                    <p>{{ news.excerpt }}</p>
+                </div>
+            </a>
+        </div>
     {% endfor %}
-</ul>
+</div>
